fix editor oversize on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -93,6 +93,9 @@ img {
   width: 100%;
   max-width: 325px;
 }
+.editor {
+  max-width: 500px;
+}
 .comments {
   padding: 0 0 1rem 0;
 }
